Add Platformio files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ examples/FailSafeMode/.vscode/
 examples/FailSafeMode/include/README
 examples/FailSafeMode/lib/README
 examples/FailSafeMode/test/README
+.pio/
+.vscode/
