--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@ src_dir = ./examples/
 lib_dir = .
 
 [env]
+;build_type = debug
 upload_speed = 921600
 monitor_speed = 115200
 
@@ -19,8 +20,7 @@ monitor_speed = 115200
 platform = espressif32
 board = esp32dev
 framework = arduino
-board_build.flash_mode = dout
-build_flags = -std=c++11 -DCORE_DEBUG_LEVEL=2
+build_flags = -std=c++11
 src_filter = -<*> +<FailSafeMode/>
 monitor_dtr = 0
 monitor_rts = 0
@@ -29,5 +29,18 @@ monitor_rts = 0
 platform = espressif8266
 board = esp12e
 framework = arduino
+;board_build.ldscript = eagle.flash.1m64.ld
 build_flags = -std=c++11 -D PIO_FRAMEWORK_ARDUINO_ESPRESSIF_SDK22x_191122
 src_filter = -<*> +<FailSafeMode/>
+
+[env:esp8266_rtc]
+extends = env:esp8266
+build_flags = ${env:esp8266.build_flags} -DFS_USE_FLASH=0
+
+[env:esp8266_spiffs]
+extends = env:esp8266
+build_flags = ${env:esp8266.build_flags} -DFS_USE_FLASH=1
+
+[env:esp8266_litllefs]
+extends = env:esp8266
+build_flags = ${env:esp8266.build_flags} -DFS_USE_FLASH=1 -DFS_USE_LITTLEFS=1
