--- a/platformio.ini
+++ b/platformio.ini
@@ -29,8 +29,12 @@ monitor_rts = 0
 platform = espressif8266
 board = esp12e
 framework = arduino
-;board_build.ldscript = eagle.flash.1m64.ld
-build_flags = -std=c++11 -D PIO_FRAMEWORK_ARDUINO_ESPRESSIF_SDK22x_191122
+board_build.ldscript = eagle.flash.1m64.ld
+build_flags = 
+    -std=c++11 
+    ;-DFS_USE_FLASH=1    ;for failsafe.h
+    ;-DFS_USE_LITTLEFS=1 ;for failsafe.h
+
 src_filter = -<*> +<FailSafeMode/>
 
 [env:esp8266_rtc]
@@ -43,4 +47,5 @@ build_flags = ${env:esp8266.build_flags} -DFS_USE_FLASH=1
 
 [env:esp8266_litllefs]
 extends = env:esp8266
-build_flags = ${env:esp8266.build_flags} -DFS_USE_FLASH=1 -DFS_USE_LITTLEFS=1
+build_flags = ${env:esp8266.build_flags} -DFS_USE_FLASH=1 -DFS_USE_LITTLEFS=1 -DFAIL_SAFE_DEBUG -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_OTA
+
